--- a/core/src/main/resources/templates/welcome-email.html
+++ b/core/src/main/resources/templates/welcome-email.html
@@ -9,21 +9,21 @@
 </head>
 <body>
 <p>
-    Hello, <span th:text="${name}">Peter Static</span>!
-</p>
-<p th:if="${name.length() > 10}">
-    Wow! You've got a long name (more than 10 chars)!
+    Здравствуйте, <span th:text="${name}">NAME</span>!
 </p>
 <p>
-    You have been successfully subscribed to the <b>CodingNConcepts</b> on
+    Вы были зарегистрированы во внутренней систему колледжа <b>Портал ГУТИ</b> от
     <span th:text="${subscriptionDate}">28-12-2012</span>
 </p>
-<p>We write on following technologies:-</p>
-<ul th:remove="all-but-first">
-    <li th:each="tech : ${technologies}" th:text="${tech}">Java</li>
-    <li>JavaScript</li>
-    <li>CSS</li>
-</ul>
+<p>Для входа в приложения используйте следующие данные:-</p>
+
+<p>
+    логин: <span th:text="${email}">email</span>
+</p>
+<p>
+    пароль: <span th:text="${password}">password</span>
+</p>
+
 <p>
     Regards, <br/>
     <em>The CodingNConcepts Team</em>
