--- a/core/src/main/resources/templates/welcome-email.html
+++ b/core/src/main/resources/templates/welcome-email.html
@@ -7,24 +7,50 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Template for HTML email</title>
 </head>
-<body>
-<p>
-    Здравствуйте,
-    Вы получили приглашение в мобильное приложение КТИ.
-</p>
-<p>Для входа в приложение используйте следующие данные:</p>
-<p>
-    логин: <span th:text="${login}">login</span>
-</p>
-<p>
-    пароль: <span th:text="${password}">password</span>
-</p>
-<p>
-    Файл приложения лежит в телеграм канале: https://t.me/+WOFBqHPlpqs5NDEy
-</p>
-<p>
-    С наилучшими пожеланиями, <br/>
-    <em>The Coding Team</em>
-</p>
+<body style="width: 600px">
+
+<h1>Уважаемые студенты и преподаватели,</h1>
+
+<p>Мы рады пригласить вас принять участие в программе бета-тестирования нашего нового приложения для Android (IOS будет
+    позже), разработанного специально для студентов и преподавателей.</p>
+
+<p>Благодаря вашим ценным отзывам и идеям, мы можем гарантировать, что наше приложение будет соответствовать
+    потребностям и ожиданиям.</p>
+
+<p>Ваша роль в качестве бета-тестера включает в себя изучение функций и пользовательского интерфейса приложения, а также
+    предоставление нам ваших отзывов, предложений и любых ошибок или проблем, с которыми вы сталкиваетесь. Ваш вклад
+    сыграет решающую роль в формировании окончательной версии приложения.</p>
+
+<h2>Чтобы принять участие в программе бета-тестирования, выполните следующие действия:</h2>
+
+<ol>
+    <li>Присоединяйтесь к нашему сообществу бета-тестеров: <a href="https://t.me/+WOFBqHPlpqs5NDEy">Телеграм</a></li>
+    <li>Загрузите бета-версию приложения. После того как вы присоединитесь к сообществу, вы получите инструкции о том,
+        как загрузить и установить бета-версию приложения на свое устройство Android.
+    </li>
+    <li>Для входа в приложение используйте следующие данные:<br>
+        Логин: <span th:text="${login}">login</span><br>
+        Пароль: <span th:text="${password}">password</span>
+    </li>
+    <li>Исследуйте и тестируйте: потратьте некоторое время на навигацию по приложению, изучение его функций и
+        использование его возможностей. Обратите внимание на любые области, которые требуют улучшения, проблемы с
+        удобством использования или потенциальные ошибки.
+    </li>
+    <li>Оставьте отзыв: Мы высоко ценим ваши отзывы. Поделитесь с нами своими мыслями, предложениями и отчетами об
+        ошибках через специальные каналы, предусмотренные в сообществе бета-тестеров. Не стесняйтесь включать скриншоты
+        или подробные описания, чтобы помочь нам лучше понять ваш отзыв.
+    </li>
+    <li>Взаимодействуйте с сообществом: общайтесь с другими бета-тестерами, делитесь своим опытом и сотрудничайте в
+        улучшении приложения. Ваши идеи и обсуждения в сообществе будут способствовать коллективному знанию и улучшению
+        приложения.
+    </li>
+</ol>
+
+<p>Надеемся на ваше активное участие и обратную связь!</p>
+
+<p>С наилучшими пожеланиями,<br>
+    The Coding Team</p>
+
+
 </body>
 </html>
